[WIP] adding netlify form

--- a/public/index.html
+++ b/public/index.html
@@ -34,5 +34,17 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+  <!-- A little help for the Netlify post-processing bots -->
+  <form name="2019-10-08-Lathes" netlify hidden>
+    <select name="latheChuck"></select>
+    <select name="lathe-turret"></select>
+    <select name="maxDia285"></select>
+    <select name="maxDia360"></select>
+    <select name="maxDia430"></select>
+    <select name="maxDia720"></select>
+    <select name="tailstock"></select>
+  </form>
+
   </body>
 </html>
